# LSproblems

./: .gitignore  README.md
courses/js210/: logic_and_flow.js  operation_and_conditions.js  scoping.js  types_and_coercion.js  variables_and_numbers.js
courses/js225/functionContext/: globalobject.js
courses/js225/studyGuide/: 1-factory-functions-guide.md  10-pseudoclassical-exercises.md  11-prototype_exercises.md  12-behavior delegation.md  13-modules-exercises.md  2-context-problems-context-loss.md  3-high-order-function-problems.md  4-js-private-data-closures.md  5-garbage-collection.md  6-iife-questions.md  7-partial-functions.md  8-js_classes_qa.md  9-constructors-qa.md  Objects.js  test.js
courses/py101/practice_problems/: calculator.py  easy1.py  easy2.py  easy3.py  hard1.py  loan_calculator.py  med1.py  (+1 more)
courses/py109/: exam_notes.txt  more_questions.txt  pedac_6_26.py
courses/py119/: missing_letter.py  studyguide.txt
courses/py129/: cheat_sheet.md  problem_space.py  quiz.py  study_guide.txt
courses/py130/packaging/: LICENSE  pyproject.toml
courses/py130/packaging/src/todolist_onji.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
courses/py139/: closures_partial_exercises.md  function_arguments_exercises.md  function_factory_exercises_w_partials.md  generator_expression.md  higher_order_first_class_study_guide.md  lambda_exercises_py_exam.md  more_exercises_w_generators.md  pure_functions_side_effects_exercises.md  python_decorators_exercises.md  python_modules_exercises.md  python_packaging_questions.md  todolist_unittest_guide.md
(+204 files in other folders)
