[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "todolist_onji"
version = "0.1.0"
authors = [
    {name = "jc", email = "myemail@myemail.com"},
]
description = "A fantastic todo list application."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    # More classifiers can be found at
]
dependencies = [
    "flask",
    "numpy"
]

[project.urls]
Homepage = "github.com/psycholomo"
Issues = "https://github.com/psycholomo"